--- a/Home_page/index.css
+++ b/Home_page/index.css
@@ -17,10 +17,10 @@ img.img-fluid {
 nav div.container {
     position: absolute;
     top: 7%;
-    left: 40%;
+    left: 33rem;
     display: flex;
     gap: 120px;
-
+    width: 310px;
 }
 
 div.box1,
@@ -76,13 +76,17 @@ nav .container .main-box p {
 
 /* main start  */
 
+main.mt-100 {
+    margin-top: 10rem;
+}
+
 /* section 1 for top doctor image and  header section*/
 
 div.position-absolute {
     display: flex;
     flex-direction: column;
     width: 80%;
-    top: -50px;
+    bottom: -100px;
     left: 10%;
 }
 
@@ -101,15 +105,15 @@ div.position-absolute .heading-image p {
 }
 
 div.position-absolute div.heading-sec-box {
-    position: relative;
+    position: absolute;
     margin: 0px;
-    top: -30px;
+    top: 120px;
     z-index: -1;
     width: 735px;
-    left: 0%;
+    left: 10rem;
 }
 
-section div.heading-sec-box p {
+div.heading-sec-box p {
     font-size: 30px;
     margin: 10px 0px;
     font-weight: 500;
@@ -126,35 +130,20 @@ section div.heading-sec-box p strong {
 
 /* section 2 start */
 
-section.container {
-    padding: 0% 0%;
-}
-
-section.container .row .col-md-8 .card img {
+.row .col-sm-8 section:nth-child(1) img {
     width: 10%;
 }
 
-section.container .row .col-md-8 .card:nth-child(1) {
-    margin: 10px;
-    height: 15rem;
-    border: none;
-}
-
-
-section.container .row .col-md-8 .card .about-us .box-title {
-    position: relative;
-    top: -40px;
-    margin: 0px 0px;
-}
-
-section.container .row .col-md-8 .card .about-us .box-title p {
+.txt {
+    position: absolute;
+    top: 10px;
     font-weight: 500;
     font-size: 20px;
     color: rgb(70, 92, 221);
     letter-spacing: 1px;
 }
 
-section.container .row .col-md-8 .card .about-us .box-title p strong {
+.txt strong {
     color: blue;
     filter: blur(1px);
     font-size: 60px;
@@ -162,62 +151,117 @@ section.container .row .col-md-8 .card .about-us .box-title p strong {
     margin: 0px 10px;
 }
 
-section.container .row .col-md-8 .card .about-us .box-body {
-    margin: -55px 0px;
-}
 
-section.container .row .col-md-8 .card .about-us .box-body p {
-    color: #0066ff;
+.context {
+    color: #003cff;
     font-weight: 500;
+    position: absolute;
+    top: 100px;
 }
 
-section.container .row .col-md-8 div.card:nth-child(2) {
-    border: none;
+.position-relative h4 {
+    text-align: right;
+    color: blue;
 }
 
-section.container .row .col-md-8 div.card:nth-child(2) .card-body .row {
+.position-relative div.row {
     display: flex;
     justify-content: space-between;
 }
 
-section.container .row .col-md-8 div.card:nth-child(2) .card-title {
-    text-align: right;
-    color: #00aeff;
-    letter-spacing: 5px;
-    font-weight: 700;
-}
-
-section.container .row .col-md-8 div.card:nth-child(2) .card-body .row .col-lg-3 .feature-img {
+.position-relative div.row .col-lg-3 {
+    flex-direction: column;
     text-align: center;
-}
-
-section.container .row .col-md-8 div.card:nth-child(2) .card-body .row .col-lg-3 .feature-img img {
-    width: 30%;
-    height: 15%;
-    border-radius: 47%;
-}
-
-section.container .row .col-md-8 div.card:nth-child(2) .card-body .row .col-lg-3 .feature-body {
-    text-align: center;
-
-}
-
-section.container .row .col-md-8 div.card:nth-child(2) .card-body .row .col-lg-3 {
-    width: 100px;
     margin: 0px 10px;
-    color: #00aeff;
+    color: #003cff;
     border-bottom: 5px double blue;
 }
 
-section.container .row .col-md-8 div.card:nth-child(2) .card-title strong {
-    font-weight: 800;
-    font-size: 37px;
+/* col sm 4 start */
+
+div.image img {
+    border-bottom-right-radius: 30px;
+    box-shadow: 5px 5px blue;
+    width: 15rem;
+    margin-left: 50px;
 }
 
-section.container .contact-us .card {
-    width: 16rem;
+.info-bar {
+    background-color: blue;
+    padding: 10px 30px;
+    border-top-left-radius: 30px;
+    text-align: right;
 }
 
-section.container .contact-us .card .card-body {
-    height: 100px;
+.info-bar .services {
+    margin: 10px 0px;
+    color: aliceblue;
+    font-size: 25px;
+    font-weight: 700;
+}
+
+.service-bar {
+    text-align: right;
+    height: 22rem;
+    margin-left: 40px;
+    background-color: aqua;
+    color: white;
+}
+
+.service-bar .txt-group {
+    line-height: 2em;
+    margin: 0px 30px;
+}
+
+.service-bar .txt-group .Title {
+    font-size: large;
+    font-weight: 900;
+    cursor: pointer;
+    transition: .5s;
+}
+
+.service-bar .txt-group .Title:hover {
+    transform: translate(-5px , -5px);
+}
+
+.service-bar img {
+    background-color: antiquewhite;
+    border: 15px solid blue;
+    border-radius: 30% 0%;
+    width: 10em;
+    position: absolute;
+    left: -90px;
+    bottom: 0px;
+    animation: border;
+    animation-duration: 3s;
+    transition: 2s;
+    animation-iteration-count: infinite;
+}
+
+/* Keyframe for qr code */
+
+@keyframes border {
+    0% {
+        border-radius: 25% 5%;
+    }
+
+    20% {
+        border-radius: 20% 10%;
+    }
+
+    40% {
+        border-radius: 10% 20%;
+    }
+
+    60% {
+        border-radius: 5% 25%;
+    }
+
+    80% {
+        border-radius: 10% 20%;
+    }
+
+    100% {
+        border-radius: 20% 10%;
+    }
 }
