--- a/Home_page/index.css
+++ b/Home_page/index.css
@@ -145,7 +145,7 @@ section div.heading-sec-box p strong {
 
 .txt strong {
     color: blue;
-    filter: blur(1px);
+    filter: blur(0px);
     font-size: 60px;
     font-weight: 800;
     margin: 0px 10px;
@@ -153,7 +153,8 @@ section div.heading-sec-box p strong {
 
 
 .context {
-    color: #003cff;
+    color: #0A5190
+    ;
     font-weight: 500;
     position: absolute;
     top: 100px;
@@ -161,7 +162,8 @@ section div.heading-sec-box p strong {
 
 .position-relative h4 {
     text-align: right;
-    color: blue;
+    color: #0A5190
+    ;
 }
 
 .position-relative div.row {
@@ -174,14 +176,26 @@ section div.heading-sec-box p strong {
     text-align: center;
     margin: 0px 10px;
     color: #003cff;
-    border-bottom: 5px double blue;
+    border-bottom: 5px double #0A5190
+    ;
+}
+
+.position-relative .logo-section .d-flex img {
+    width: 25px;
+    height: 25px;
+    margin: 0px 5px;
+}
+
+.position-relative .logo-section .d-flex {
+    margin-left: 15em;
+    margin-top: -10px;
 }
 
 /* col sm 4 start */
 
 div.image img {
     border-bottom-right-radius: 30px;
-    box-shadow: 5px 5px blue;
+    box-shadow: 5px 5px #0A5190;
     width: 15rem;
     margin-left: 50px;
 }
@@ -202,7 +216,7 @@ div.image img {
 
 .service-bar {
     text-align: right;
-    height: 22rem;
+    height: 23rem;
     margin-left: 40px;
     background-color: aqua;
     color: white;
@@ -221,7 +235,7 @@ div.image img {
 }
 
 .service-bar .txt-group .Title:hover {
-    transform: translate(-5px , -5px);
+    transform: translate(-5px, -5px);
 }
 
 .service-bar img {
@@ -237,6 +251,8 @@ div.image img {
     transition: 2s;
     animation-iteration-count: infinite;
 }
+
+
 
 /* Keyframe for qr code */
 
