--- a/Home_page/index.css
+++ b/Home_page/index.css
@@ -153,8 +153,7 @@ section div.heading-sec-box p strong {
 
 
 .context {
-    color: #0A5190
-    ;
+    color: #0A5190;
     font-weight: 500;
     position: absolute;
     top: 100px;
@@ -162,8 +161,7 @@ section div.heading-sec-box p strong {
 
 .position-relative h4 {
     text-align: right;
-    color: #0A5190
-    ;
+    color: #0A5190;
 }
 
 .position-relative div.row {
@@ -175,15 +173,19 @@ section div.heading-sec-box p strong {
     flex-direction: column;
     text-align: center;
     margin: 0px 10px;
-    color: #003cff;
-    border-bottom: 5px double #0A5190
-    ;
+    color: #0A5190;
+    border-bottom: 5px double #0A5190;
 }
 
 .position-relative .logo-section .d-flex img {
     width: 25px;
     height: 25px;
     margin: 0px 5px;
+    transition: .5s;
+}
+
+.position-relative .logo-section .d-flex img:hover {
+    transform: translate(0px , -8px);
 }
 
 .position-relative .logo-section .d-flex {
